Updated checkout dialog and navbar

--- a/src/index.html
+++ b/src/index.html
@@ -15,3 +15,8 @@
     <app-root></app-root>
   </body>
 </html>
+
+<script src="https://astral-accessibility.pages.dev/main.js"></script>
+<script>
+  initializeAstral();
+</script>
